# xcoro

./: .clang-format  .gitignore  CMakeLists.txt  README.md  net.md
cmake/: xcoroConfig.cmake.in
docs/: cancellation.md  io_scheduler.md  net.md  sync.md  when_all.md
include/xcoro/: awaitable_traits.hpp  cancellation.hpp  cancellation_registration.hpp  cancellation_scope.hpp  cancellation_source.hpp  cancellation_state.hpp  cancellation_token.hpp  condition_variable.hpp  event.hpp  generator.hpp  latch.hpp  manual_reset_event.hpp  mutex.hpp  semaphore.hpp  sync_wait.hpp  when_all.hpp  when_any.hpp
include/xcoro/net/: acceptor.hpp  address.hpp  buffer.hpp  endpoint.hpp  io_context.hpp  io_scheduler.hpp  resolver.hpp  socket.hpp  tcp_acceptor.hpp  tcp_stream.hpp
include/xcoro/net/detail/: blocking_resolver.hpp  descriptor_state.hpp  epoll_reactor.hpp  fd_ops.hpp  io_context_access.hpp  no_sigpipe.hpp  operation_state.hpp  timer_queue.hpp
tests/: cancellation_test.cpp  generator_test.cpp  mutex_test.cpp  net_test.cpp
